; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ocsp/extr_ocsp_srv.c_OCSP_basic_add1_cert.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ocsp/extr_ocsp_srv.c_OCSP_basic_add1_cert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OCSP_basic_add1_cert(%struct.TYPE_3__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = call i32* (...) @sk_X509_new_null()
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  store i32* %11, i32** %13, align 8
  %14 = icmp eq i32* %11, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %27

16:                                               ; preds = %10, %2
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @sk_X509_push(i32* %19, i32* %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %16
  store i32 0, i32* %3, align 4
  br label %27

24:                                               ; preds = %16
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @X509_up_ref(i32* %25)
  store i32 1, i32* %3, align 4
  br label %27

27:                                               ; preds = %24, %23, %15
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32* @sk_X509_new_null(...) #1

declare dso_local i32 @sk_X509_push(i32*, i32*) #1

declare dso_local i32 @X509_up_ref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
